fix: pyxpcom: check validity of existing default gateways https://bugzilla.mozilla.org/show_bug.cgi?id=671625 a=marky